# ninja-api

./: .env.example  .env.tests  .gitignore  README.md  db.sqlite3  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
cobreja_app/: apps.py  config.py  models.py
cobreja_app/management/commands/: migrate_tenants.py
cobreja_app/migrations/: 0001_initial.py  0002_rule_template_installment_rulestep.py
cobreja_app/shareds/: enum.py
cobreja_app/tests/charges/v001/: test_api_e2e.py
cobreja_app/tests/installments/v001/: test_api_e2e.py
cobreja_app/tests/rule_steps/v001/: test_api_e2e.py
cobreja_app/tests/rules/v001/: test_api_e2e.py
cobreja_app/tests/templates/v001/: test_api_e2e.py
cobreja_app/v001/charges/: api.py
cobreja_app/v001/charges/tests/: test_api.py
cobreja_app/v001/installments/: api.py
cobreja_app/v001/installments/tests/: test_api.py
cobreja_app/v001/rule_steps/: api.py
cobreja_app/v001/rule_steps/tests/: test_api.py
cobreja_app/v001/rules/: api.py
cobreja_app/v001/rules/tests/: test_api.py
cobreja_app/v001/templates/: api.py
cobreja_app/v001/templates/tests/: test_api.py
cobreja_app/views/charges/v001/: api.py  router.py
cobreja_app/views/installments/v001/: api.py  router.py
cobreja_app/views/rule_steps/v001/: __init__.py  api.py  router.py
cobreja_app/views/rules/v001/: api.py  router.py
cobreja_app/views/templates/v001/: api.py  router.py
core/: api.py  asgi.py  config.py  db_router.py  exceptions.py  middleware.py  otel_setup.py  settings.py  urls.py  wsgi.py
core/middlewares/: multi_tenant_middleware.py
core/security/: auth.py
core/telemetry/: otel_middleware.py  otel_setup.py
core/tenancy/: multi_tenant_middleware.py
core/tests/: test_middleware.py
telemetry/: otel-collector.yaml
tracks/: api.py  schema.py
tracks/management/commands/: ingest_tracks.py
tracks/migrations/: 0001_initial.py
