[project]
name = "ninja-api"
version = "0.0.1"
description = "Projeto para estudo do framework Django Ninja"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jefferson Nunes Fonseca", email = "jeffersonnunesfonseca@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.4.3",
    "django-redis>=6.0.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-django>=0.58b0",
    "opentelemetry-instrumentation-psycopg2>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-instrumentation-sqlite3>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "orjson>=3.11.3",
    "psutil>=7.1.0",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-env>=1.1.5",
]

[project.urls]
Homepage = "https://www.otaviomiranda.com.br/"
# Documentation = "https://example.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-xdist"]


# ============================
# Lint e formatação (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

# Regras estão em https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    # "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    # "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    # "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    # "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = ["ignore::DeprecationWarning"]
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "env",
    "node_modules",
    "migrations",
    "__pycache__",
    "*.egg-info",
    "tempo-data",
]
env = ["DJANGO_ENV=test"]
